--- a/RentalProject/Views/Customers/Index.cshtml
+++ b/RentalProject/Views/Customers/Index.cshtml
@@ -16,7 +16,7 @@ else
         <thead>
             <tr>
                 <th scope="col">Customer</th>
-                <th scope="col">Membership Type</th>
+                <th scope="col">Discount Rate</th>
 
             </tr>
         </thead>
