customer added and dropdown added in form

--- a/RentalProject/Views/Customers/New.cshtml
+++ b/RentalProject/Views/Customers/New.cshtml
@@ -1,4 +1,4 @@
-﻿@model RentalProject.Models.Customer
+﻿@model RentalProject.ViewModels.NewCustomerViewModel
 @{
     ViewBag.Title = "New";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -9,18 +9,24 @@
 @using (Html.BeginForm("Create", "Customer"))
 {
     <div class="form-group">
-        @Html.LabelFor(m => m.Name)
-        @Html.TextBoxFor(m => m.Name , new {@class = "form-control" })
+        @Html.LabelFor(m => m.Customer.Name)
+        @Html.TextBoxFor(m => m.Customer.Name, new { @class = "form-control" })
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(m => m.BirthDate)
-        @Html.TextBoxFor(m => m.BirthDate, new { @class = "form-control" })
+        @Html.LabelFor(m => m.Customer.BirthDate)
+        @Html.TextBoxFor(m => m.Customer.BirthDate, new { @class = "form-control" })
     </div>
 
-   <div class="checkbox">
-       <label>
-           @Html.CheckBoxFor(m => m.IsSubscribedToNewsLetter) Subscribe to news Letter ?
-       </label>
-   </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.Customer.MembershipTypeId)
+        @Html.DropDownListFor(m => m.Customer.MembershipTypeId,new SelectList(Model.MembershipTypes, "Id", "Name"), "Select Membership Type " , new { @class = "form-control" })
+    </div>
+
+    <div class="checkbox">
+        <label>
+            @Html.CheckBoxFor(m => m.Customer.IsSubscribedToNewsLetter) Subscribe to news Letter ?
+        </label>
+    </div>
+    <button class="btn btn-primary" type="submit">Save</button>
 }
