--- a/RentalProject/Views/Customers/Index.cshtml
+++ b/RentalProject/Views/Customers/Index.cshtml
@@ -25,7 +25,7 @@ else
             @foreach (var customer in Model)
             {
             <tr>
-                <td>@Html.ActionLink(customer.Name, "Detail", "Customers", new { Id = customer.Id }, null)</td>
+                <td>@Html.ActionLink(customer.Name, "Edit", "Customers", new { Id = customer.Id }, null)</td>
                 <td>@customer.MembershipType.Name</td>
             </tr>
 
