--- a/RentalProject/Views/Customers/New.cshtml
+++ b/RentalProject/Views/Customers/New.cshtml
@@ -15,7 +15,7 @@
 
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.BirthDate)
-        @Html.TextBoxFor(m => m.Customer.BirthDate, new { @class = "form-control" })
+        @Html.TextBoxFor(m => m.Customer.BirthDate,"{0:d/mmm/yyyy}", new { @class = "form-control" })
     </div>
 
     <div class="form-group">
