--- a/RentalProject/Views/Customers/New.cshtml
+++ b/RentalProject/Views/Customers/New.cshtml
@@ -6,7 +6,7 @@
 
 <h2>New Customer</h2>
 
-@using (Html.BeginForm("Create", "Customer"))
+@using (Html.BeginForm("Save", "Customers"))
 {
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.Name)
@@ -28,5 +28,6 @@
             @Html.CheckBoxFor(m => m.Customer.IsSubscribedToNewsLetter) Subscribe to news Letter ?
         </label>
     </div>
+    @Html.HiddenFor(m => m.Customer.Id)
     <button class="btn btn-primary" type="submit">Save</button>
 }
