Exercise movies adding and updating done

--- a/RentalProject/Views/Customers/Index.cshtml
+++ b/RentalProject/Views/Customers/Index.cshtml
@@ -6,6 +6,9 @@
 
 <h2>Customers</h2>
 
+<p>
+    @Html.ActionLink("Add new Customer", "New", "Customers", null, new {@class="btn btn-primary" })
+</p>
 @if (!Model.Any())
 {
     <h5>No Customer Till now</h5>
