--- a/RentalProject/Views/Movies/Index.cshtml
+++ b/RentalProject/Views/Movies/Index.cshtml
@@ -6,7 +6,7 @@
     }
 
     <h2>Movies</h2>
-
+    @Html.ActionLink("Add New Movies", "New", "Movies", null, new {@class = "btn btn-primary" })
     <table class="table table-striped">
         <thead>
             <tr>
@@ -20,7 +20,7 @@
             @foreach (var movie in Model)
             {
                 <tr>
-                    <td>@Html.ActionLink(movie.Name, "Detail", "Movies", new { Id = movie.Id }, null)</td>
+                    <td>@Html.ActionLink(movie.Name, "Edit", "Movies", new { Id = movie.Id }, null)</td>
                     <td>@movie.Genre.Name</td>
                 </tr>
 
